structure files and minor fixes

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,7 +5,7 @@ variables:
   PORT_CLIENT_SECRET: $PORT_CLIENT_SECRET
   DATADOG_API_KEY: $DATADOG_API_KEY
   DATADOG_APPLICATION_KEY: $DATADOG_APPLICATION_KEY
-  DATADOG_ENVIRONMENT_ID: $DATADOG_ENVIRONMENT_ID
+  DATADOG_API_URL: $DATADOG_API_URL
 
 stages:
   - build
